<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_map_bg"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:id="@+id/ll_login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="vertical"
            android:paddingTop="@dimen/_30sdp">


            <com.project.biker.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/tv_sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/font_title"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.project.biker.utils.CustomEditText
                    android:id="@+id/etRegisterActFname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_username"
                    android:background="@drawable/rounded_login_view"
                    android:drawableLeft="@drawable/ic_usr"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/hint_register_first_name"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:maxLength="50"/>

                <com.project.biker.utils.CustomEditText
                    android:id="@+id/etRegisterActLname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_username"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_login_view"
                    android:drawableLeft="@drawable/ic_usr"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/hint_register_last_name"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:maxLength="50"/>


                <com.project.biker.utils.CustomEditText
                    android:id="@+id/etRegisterActEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_username"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_login_view"
                    android:drawableLeft="@drawable/mail_2"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/hint_register_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:maxLength="50"/>

                <RadioGroup
                    android:id="@+id/rd_registerAct_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/rb_registerAct_male"
                    android:orientation="horizontal">


                    <com.project.biker.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/lbl_gender"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_normal" />

                    <com.project.biker.utils.CustomRadioButton
                        android:id="@+id/rb_registerAct_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/lbl_male"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_normal" />

                    <com.project.biker.utils.CustomRadioButton
                        android:id="@+id/rb_registerAct_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_female"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_normal" />
                </RadioGroup>

                <com.project.biker.utils.CustomEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_password"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_login_view"
                    android:drawableLeft="@drawable/ic_pwd"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:maxLength="50"/>


                <com.project.biker.utils.CustomEditText
                    android:id="@+id/etLoginConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_password"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_login_view"
                    android:drawableLeft="@drawable/ic_pwd"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/hint_login_confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:maxLength="50"/>


                <com.project.biker.utils.CustomEditText
                    android:id="@+id/etActivationKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_password"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_login_view"
                    android:drawableLeft="@drawable/ic_activation_key"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/hint_login_activation_key"
                    android:inputType="number"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />


            </LinearLayout>

            <com.project.biker.utils.CustomButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/rounded_button"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:textSize="@dimen/font_title" />
        </LinearLayout>


    </ScrollView>
</RelativeLayout>