<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dialog_header_color"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.project.biker.utils.CustomBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/information"
                    android:textColor="@color/dialog_font_color"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_dialog_close"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_weight="0.8"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <!-- Inner View  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_5sdp">

                    <com.project.biker.utils.CustomBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/you_are_share_your_loc"
                        android:textColor="@color/dialog_font_color"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Blue is you -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_loction_blue" />

                    <com.project.biker.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/blue_is_you"
                        android:textColor="@color/dialog_font_color"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Green  is your frnd -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_loction_green" />

                    <com.project.biker.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/green_is_your_frnd"
                        android:textColor="@color/dialog_font_color"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Res is other -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location_purple" />

                    <com.project.biker.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/res_is_othe_frnd"
                        android:textColor="@color/dialog_font_color"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dialog_header_color"
                    android:padding="@dimen/_10sdp">

                    <com.project.biker.utils.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dialog_footer"
                        android:textColor="@color/dialog_font_color"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chkDialogOnOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.project.biker.utils.CustomBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notSeeWindow"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>