<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/ic_map_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_login1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.project.biker.utils.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_title"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/title_activation"/>

                    <com.project.biker.utils.CustomEditText
                        android:id="@+id/etActivationActEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:drawableLeft="@drawable/mail_2"
                        android:visibility="gone"
                        android:drawablePadding="@dimen/_15sdp"
                        android:hint="@string/hint_register_email"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@null"
                        android:background="@drawable/rounded_login_view"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:lines="1"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textColorHint="@color/white" />

                    <com.project.biker.utils.CustomEditText
                        android:id="@+id/etActivationActKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:drawableLeft="@drawable/ic_activation_key"
                        android:drawablePadding="@dimen/_15sdp"
                        android:hint="@string/hint_login_activation_key"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@null"
                        android:background="@drawable/rounded_login_view"
                        android:inputType="number"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:lines="1"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textColorHint="@color/white" />
                </LinearLayout>
                <com.project.biker.utils.CustomButton
                    android:id="@+id/btnActivationAcyLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/rounded_button"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/font_title"
                    android:text="@string/btn_login"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>